Styling and format changes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style= "background-image: linear-gradient(to right, #24243e, #302b63, #24243e); color: rgb(201, 195, 195);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
